# Advanced-Horizon2D-Game-Engine

./: CMakeLists.txt
exemple/: CMakeLists.txt  collision_channel.h  main.cpp  platform.hpp  player.hpp  sprite.h  test_emitter.hpp
src/: actor.cpp  actor.h  character.cpp  character.h  controller.cpp  controller.h  light_actor.h
src/audio/: al_audio_buffer.cpp  al_audio_buffer.h  al_audio_source.cpp  al_audio_source.h  al_audio_utils.cpp  al_audio_utils.h
src/components/: base_component.cpp  base_component.h  camera.cpp  camera.h  character_movement.cpp  character_movement.h  light.cpp  light.h  line_trace.cpp  line_trace.h  skeletal_sprite.cpp  skeletal_sprite.h  sprite.cpp  sprite.h
src/components/colliders/: box_collision.cpp  box_collision.h  capsule_collision.cpp  capsule_collision.h
src/core/: assets_manager.cpp  assets_manager.h  h2d_namespace.h  maths.h  reflection.cpp  reflection.h  window.cpp  window.h
src/effects/: emitter.cpp  emitter.h
src/rendering/: physics_namespace.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h
src/ui/: base_widget.cpp  base_widget.h  widget_button.cpp  widget_button.h  widget_container.cpp  widget_container.h  widget_image.cpp  widget_image.h
src/utils/: conversions.h  line_trace.cpp  line_trace.h  log.h  time.h
